# ImageFilter

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md
ImageFilter/: CMakeLists.txt
ImageFilter-CLI/: CMakeLists.txt  main.cpp
ImageFilter-CLI/cli/: BatchProcessor.cpp  BatchProcessor.h  CommandExecutor.cpp  CommandExecutor.h  CommandParser.cpp  CommandParser.h  FilterFactory.cpp  FilterFactory.h  FilterInfoDisplay.cpp  FilterInfoDisplay.h  ImageProcessingHelper.cpp  ImageProcessingHelper.h  ProgressDisplay.cpp  ProgressDisplay.h
ImageFilter-CLI/preset/: Config.cpp  Config.h  PresetManager.cpp  ResumeStateManager.cpp
ImageFilter-CLI/test/: CMakeLists.txt  ImageProcessingHelperTests.cpp
ImageFilter-GUI/: CMakeLists.txt  main.cpp  style.qrc
ImageFilter-GUI/controller/: ImageProcessorController.cpp  ImageProcessorController.h
ImageFilter-GUI/docs/: ui_theme.md
ImageFilter-GUI/gui/: AppViewModel.h  BaseFilterConfigWidget.cpp  BaseFilterConfigWidget.h  ClickableSlider.cpp  ClickableSlider.h  FilterChainPanel.cpp  FilterChainPanel.h  FilterChainPanel.ui  FilterItemWidget.cpp  FilterItemWidget.h  FilterItemWidget.qrc  FilterItemWidget.ui  FilterListModel.cpp  FilterListModel.h  FilterListViewModel.h  FilterParametersViewModel.h  FilterProxyModel.cpp  FilterProxyModel.h  FilterSelectionDialog.cpp  FilterSelectionDialog.h  FilterSelectionDialog.ui  FilterWidgetFactory.cpp  FilterWidgetFactory.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PreviewViewModel.h  PreviewWidget.cpp  PreviewWidget.h
ImageFilter-GUI/gui/filters/: BlurFilterWidget.cpp  BlurFilterWidget.h  BlurFilterWidget.ui  BoxBlurFilterWidget.cpp  BoxBlurFilterWidget.h  BoxBlurFilterWidget.ui  BrightnessFilterWidget.cpp  BrightnessFilterWidget.h  BrightnessFilterWidget.ui  ContrastFilterWidget.cpp  ContrastFilterWidget.h  ContrastFilterWidget.ui  EdgeDetectionFilterWidget.cpp  EdgeDetectionFilterWidget.h  EdgeDetectionFilterWidget.ui  EmbossFilterWidget.cpp  EmbossFilterWidget.h  EmbossFilterWidget.ui  MedianFilterWidget.cpp  MedianFilterWidget.h  MedianFilterWidget.ui  MotionBlurFilterWidget.cpp  MotionBlurFilterWidget.h  MotionBlurFilterWidget.ui  NoiseFilterWidget.cpp  NoiseFilterWidget.h  NoiseFilterWidget.ui  PosterizeFilterWidget.cpp  PosterizeFilterWidget.h  PosterizeFilterWidget.ui  Rotate90FilterWidget.cpp  Rotate90FilterWidget.h  Rotate90FilterWidget.ui  SaturationFilterWidget.cpp  SaturationFilterWidget.h  SaturationFilterWidget.ui  SharpenFilterWidget.cpp  SharpenFilterWidget.h  SharpenFilterWidget.ui  ThresholdFilterWidget.cpp  (+5 more)
ImageFilter-GUI/model/: FilterChainModel.cpp  FilterChainModel.h  ImageModel.cpp  ImageModel.h
ImageFilter-GUI/style/: light_theme.qss
ImageFilter-GUI/worker/: FilterAdapter.cpp  FilterAdapter.h  ImageProcessingWorker.cpp  ImageProcessingWorker.h
ImageFilter/include/ImageFilter/: ImageProcessor.h
ImageFilter/include/ImageFilter/filters/: ContrastFilter.h  EdgeDetectionFilter.h  GaussianBlurFilter.h  GrayscaleFilter.h  NoiseFilter.h  OutlineFilter.h  PosterizeFilter.h  SaturationFilter.h  SepiaFilter.h
ImageFilter/include/ImageFilter/utils/: BorderHandler.h  CacheManager.h  ColorSpaceConverter.h  ErrorCodes.h  FilterResult.h  FilterValidationHelper.h  FilterValidator.h  IBufferPool.h  IThreadPool.h  ImageConverter.h  ImageSaver.h  Logger.h  LoggerConfigurator.h  LookupTables.h  ParallelImageProcessor.h  PathValidator.h  SafeMath.h  ThreadPool.h
ImageFilter/src/: ImageProcessor.cpp
ImageFilter/src/filters/: BrightnessFilter.cpp  EdgeDetectionFilter.cpp  EmbossFilter.cpp  FlipHorizontalFilter.cpp  FlipVerticalFilter.cpp  GaussianBlurFilter.cpp  IFilter.cpp  InvertFilter.cpp  MotionBlurFilter.cpp  NoiseFilter.cpp  OutlineFilter.cpp  ThresholdFilter.cpp  VignetteFilter.cpp
ImageFilter/src/utils/: BMPHandler.cpp  BorderHandler.cpp  CacheManager.cpp  ErrorHandlerChain.cpp  FileSystemHelper.cpp  FilterResult.cpp  FilterValidationHelper.cpp  FilterValidator.cpp  ImageLoader.cpp  ImageSaver.cpp  ImageValidator.cpp  Logger.cpp  LoggerConfigurator.cpp  PathValidator.cpp  ThreadPool.cpp
ImageFilter/test/: CMakeLists.txt  ColorSpaceConverterTests.cpp  SafeMathTests.cpp
benchmark/: .gitignore  INSTALL.md  README.md  install.ps1  pyproject.toml  requirements.txt
benchmark/.run/: benchmark_all_unix.run.xml  benchmark_all_windows.run.xml  benchmark_chains_unix.run.xml  benchmark_chains_windows.run.xml  benchmark_unix.run.xml  benchmark_windows.run.xml  generate_test_images.run.xml
benchmark/benchmark/: __init__.py  benchmark.py  generate_test_images.py
benchmark/output/: benchmark_results.csv  benchmark_results.json  benchmark_statistics.csv
cmake/: CodeCoverage.cmake  Doxygen.cmake  Sanitizers.cmake  StaticAnalysis.cmake
docs/: DEVELOPER_GUIDE.md  DOXYGEN_GUIDE.md  USER_GUIDE.md  mainpage.md
examples/: README.md  example_basic_usage.cpp  example_custom_filter.cpp  example_filter_usage.cpp  example_parallel_processing.cpp
include/: ImageProcessor.h
include/cli/: CommandHandler.h  PresetManager.h  ProgressDisplay.h
include/filters/: BoxBlurFilter.h  BrightnessFilter.h  ContrastFilter.h  EdgeDetectionFilter.h  EmbossFilter.h  FlipHorizontalFilter.h  FlipVerticalFilter.h  IFilter.h  (+14 more)
src/: ImageProcessor.cpp  main.cpp
tests/: test_BMPHandler.cpp  test_BufferPool.cpp  test_CacheManager.cpp  test_ColorSpaceConverter.cpp  test_CommandExecutor.cpp  test_CommandParser.cpp  test_Config.cpp  test_ErrorHandlerChain.cpp  test_FileSystemHelper.cpp  test_FilterFactory.cpp  test_FilterInfoDisplay.cpp  test_FilterResult.cpp  test_FilterValidationHelper.cpp  test_FilterValidator.cpp  test_ImageConverter.cpp  test_ImageLoader.cpp  test_ImageProcessingHelper.cpp  test_ImageProcessor.cpp  test_ImageSaver.cpp  test_ImageValidator.cpp  test_Logger.cpp  test_LoggerConfigurator.cpp  test_LookupTables.cpp  test_ParallelImageProcessor.cpp  test_PathValidator.cpp  test_PresetManager.cpp  test_ProgressDisplay.cpp  test_ResumeStateManager.cpp  test_ThreadPool.cpp  test_edge_cases.cpp  test_filters.cpp  test_integration.cpp  test_utils.cpp  test_utils.h
(+59 files in other folders)
